--- a/src/component/Silaras-component/content-laras.css
+++ b/src/component/Silaras-component/content-laras.css
@@ -1,6 +1,6 @@
 .main-dashboard{
     width: 1610px;
-    height: 2000px;
+    height: auto;
     flex-shrink: 0;
     overflow-y: hidden;
 }
@@ -27,7 +27,7 @@
 }
 .main-dashboard .content-col{
     display: flex;
-    height: 1743px;
+    height: auto;
     flex-direction: column;
     align-items: flex-start;
     gap: 20px;
@@ -66,10 +66,10 @@
     line-height: 32px; /* 133.333% */
     letter-spacing: -0.48px;
     margin-top: 30px;
+    margin-left: 75px;
 }
 .main-dashboard .content-col .box .content table{
-    width:1183px;
-    margin-left: 20px;
+    width: 1108px;
 }
 .main-dashboard .content-col .box .content table tr{
     gap: 10px;
@@ -282,7 +282,7 @@
 }
 .main-dashboard .profile{
     display: flex;
-    position: absolute;
+    position: fixed;
     flex-direction: row;
     width: 300px;
     height: 61px;
