adding map in MAWASDIRI

--- a/src/component/Mawasdiri-component/cuti.css
+++ b/src/component/Mawasdiri-component/cuti.css
@@ -34,7 +34,6 @@
     flex-shrink: 0;
     overflow-y: hidden;
 }
-
 .main-dashboard .content-col .box .content{
     display: flex;
     width: 1610px;
@@ -110,7 +109,7 @@
 .main-dashboard .content-col .box .content-f{
     display: flex;
     width: 1212px;
-    height: 400px;
+    height: auto;
     flex-shrink: 0;    
     flex-direction: column;
     align-items: flex-start;
@@ -118,6 +117,9 @@
     border-radius: 20px;
     background: #000B48;
     margin-top: 20px;
+}
+.main-dashboard .content-col .box .content-f #map{
+    width: 1212px;
 }
 .main-dashboard .content-col .box .content-f h1{
     color: #FFF;
@@ -134,6 +136,7 @@
     display: flex;
     flex-direction: column;
     margin-left: 29px;
+    padding-bottom: 20px;
 }
 .main-dashboard .content-col .box .content-f label{
     color: #A3AED0;
@@ -162,6 +165,24 @@
     letter-spacing: -0.24px;
     padding-left: 35px;
     margin-left: 35px;
+}
+.main-dashboard .content-col .box .content-f textarea{
+    width: 1059px;
+    height: 255px;
+    flex-shrink: 0;
+    border-radius: 16px;
+    background: #001274;
+    margin-bottom: 20px;
+    color: #FFF;
+    font-family: "DM Sans";
+    font-size: 19px;
+    font-style: normal;
+    font-weight: 500;
+    line-height: 20px; /* 166.667% */
+    letter-spacing: -0.24px;
+    padding-left: 35px;
+    margin-left: 35px;
+    padding-top: 15px;
 }
 .main-dashboard .content-col .box .content-tx{
     display: flex;
@@ -234,7 +255,60 @@
     flex-direction: row;
     width: 1153px;
     gap: 10px;
+    align-items: flex-start;
 }
+.main-dashboard .content-col .box .content-f .check{
+    display: flex;
+    flex-direction: row;
+    width: 1153px;
+    align-items: flex-start;
+    margin-top: -15px;
+}
+.main-dashboard .content-col .box .content-f .check-form{
+    flex-direction: column;
+    width: 1153px;
+    align-items: flex-start;
+    margin-top: -15px;
+}
+.main-dashboard .content-col .box .content-f .check-form label{
+    color: #A3AED0;
+    font-family: "DM Sans";
+    font-size: 19px;
+    font-style: normal;
+    font-weight: 500;
+    line-height: 20px; /* 166.667% */
+    letter-spacing: -0.24px;
+    margin-bottom: 15px;
+    margin-left: 38px;
+}
+.main-dashboard .content-col .box .content-f .check-form input{
+    width: 1059px;
+    height: 40px;
+    flex-shrink: 0;
+    border-radius: 16px;
+    background: #001274;
+    margin-bottom: 20px;
+    color: #FFF;
+    font-family: "DM Sans";
+    font-size: 19px;
+    font-style: normal;
+    font-weight: 500;
+    line-height: 20px; /* 166.667% */
+    letter-spacing: -0.24px;
+    padding-left: 35px;
+    margin-left: 35px;
+}
+
+.main-dashboard .content-col .box .content-f .check input[type="checkbox"]{
+    width: 20px;
+    height: 20px;
+    flex-shrink: 0;
+    border-radius: 16px;
+    background-color: #001274;
+    margin-left: 39px;
+    margin-top: 12px;
+}
+
 .main-dashboard .content-col .box .content-ty .check input[type="checkbox"]{
     width: 24px;
     height: 24px;
@@ -243,6 +317,22 @@
     background-color: #001274;
     margin-left: 28px;
     margin-top: 12px;
+}
+.main-dashboard .content-col .box .content-f .check label{
+    display: flex;
+    width: 100px;
+    height: 46px;
+    align-items: center;
+    flex-shrink: 0;
+    border-radius: 16px;
+    background: #000B48;
+    color: #FFF;
+    font-family: "DM Sans";
+    font-size: 16px;
+    font-style: normal;
+    font-weight: 700;
+    line-height: 28px; /* 175% */
+    letter-spacing: -0.32px;
 }
 .main-dashboard .content-col .box .content-ty .check label{
     display: flex;
@@ -282,7 +372,7 @@
 }
 .main-dashboard .profile{
     display: flex;
-    position: absolute;
+    position: fixed;
     flex-direction: row;
     width: 300px;
     height: 61px;
@@ -332,4 +422,11 @@
 .main-dashboard .profile svg:hover{
     transform: scale(1.1);
     transition: all 0.4s ease-in-out;
+}
+::-webkit-calendar-picker-indicator{
+    background-color: #ffffff;
+    padding: 5px;
+    cursor: pointer;
+    border-radius: 3px;
+    margin-right: 30px;
 }
