--- a/src/component/Mawasdiri-component/cuti.css
+++ b/src/component/Mawasdiri-component/cuti.css
@@ -118,9 +118,6 @@
     background: #000B48;
     margin-top: 20px;
 }
-.main-dashboard .content-col .box .content-f #map{
-    width: 1212px;
-}
 .main-dashboard .content-col .box .content-f h1{
     color: #FFF;
     font-family: "DM Sans";
@@ -148,6 +145,7 @@
     letter-spacing: -0.24px;
     margin-bottom: 15px;
     margin-left: 38px;
+    width: 150px;
 }
 .main-dashboard .content-col .box .content-f input{
     width: 1059px;
@@ -270,6 +268,24 @@
     align-items: flex-start;
     margin-top: -15px;
 }
+.main-dashboard .content-col .box .content-f .check-form .inp-date{
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+}
+.main-dashboard .content-col .box .content-f .check-form .inp-date .text{
+    color: #A3AED0;
+    font-family: "DM Sans";
+    font-size: 19px;
+    font-style: normal;
+    font-weight: 500;
+    line-height: 20px; /* 166.667% */
+    letter-spacing: -0.24px;
+    width: 20px;
+}
+.main-dashboard .content-col .box .content-f .check-form .inp-date input{
+    width: 250px;
+}
 .main-dashboard .content-col .box .content-f .check-form label{
     color: #A3AED0;
     font-family: "DM Sans";
@@ -280,6 +296,7 @@
     letter-spacing: -0.24px;
     margin-bottom: 15px;
     margin-left: 38px;
+    
 }
 .main-dashboard .content-col .box .content-f .check-form input{
     width: 1059px;
@@ -320,7 +337,7 @@
 }
 .main-dashboard .content-col .box .content-f .check label{
     display: flex;
-    width: 100px;
+    width: 150px;
     height: 46px;
     align-items: center;
     flex-shrink: 0;
