--- a/src/component/Mawasdiri-component/content.css
+++ b/src/component/Mawasdiri-component/content.css
@@ -163,6 +163,23 @@
     padding-left: 35px;
     margin-left: 35px;
 }
+.main-dashboard .content-col .box .content-f select{
+    width: 1059px;
+    height: 40px;
+    flex-shrink: 0;
+    border-radius: 16px;
+    background: #001274;
+    margin-bottom: 20px;
+    color: #FFF;
+    font-family: "DM Sans";
+    font-size: 19px;
+    font-style: normal;
+    font-weight: 500;
+    line-height: 20px; /* 166.667% */
+    letter-spacing: -0.24px;
+    padding-left: 35px;
+    margin-left: 35px;
+}
 .main-dashboard .content-col .box .content-tx{
     display: flex;
     width: 1212px;
@@ -292,6 +309,7 @@
     margin-left: 1120px;
     margin-top: -75px;
     gap: 20px;
+    z-index: 10;
 }
 .main-dashboard .profile input{
     width: 122px;
