--- a/src/component/Silaras-component/fix-form.css
+++ b/src/component/Silaras-component/fix-form.css
@@ -145,6 +145,7 @@
     letter-spacing: -0.24px;
     margin-bottom: 15px;
     margin-left: 38px;
+    width: 390px;
 }
 .main-dashboard .content-col .box .content-f input{
     width: 1059px;
