--- a/src/pages/silaras-page/fix-form.css
+++ b/src/pages/silaras-page/fix-form.css
@@ -6,3 +6,26 @@
     background: #000E60;
     overflow-y: hidden;
 }
+.dashboard .content{
+    display: flex;
+    flex-direction: column;
+}
+.dashboard .content .switch{
+    position: absolute;
+    padding: 9px 17px;
+    justify-content: center;
+    align-items: center;
+    border-radius: 16px;
+    background: #D30ED8;
+    width: 300px;
+    height: 50px;
+    color: #FFF;
+    font-family: "DM Sans";
+    font-size: 24px;
+    font-style: normal;
+    font-weight: 500;
+    line-height: 28px; /* 175% */
+    letter-spacing: -0.32px;
+    margin-top: 26px;
+    margin-left: 450px;
+}
