--- a/src/component/Mawasdiri-component/cuti.css
+++ b/src/component/Mawasdiri-component/cuti.css
@@ -1,5 +1,5 @@
 .main-dashboard{
-    width: 1610px;
+    width: auto;
     height: 2000px;
     flex-shrink: 0;
     overflow-y: hidden;
@@ -146,6 +146,28 @@
     margin-bottom: 15px;
     margin-left: 38px;
     width: 230px;
+}
+.main-dashboard .content-col .box .content table{
+    width:1183px;
+    margin-left: 20px;
+}
+.main-dashboard .content-col .box .content table tr{
+    gap: 10px;
+    width: 1183px;
+    padding-left: 10px;
+    text-align: center;
+}
+.main-dashboard .content-col .box .content table tr th{
+    color: #A3AED0;
+    font-family: "DM Sans";
+    font-size: 14px;
+    font-style: normal;
+    text-align: center;
+    font-weight: 500;
+    line-height: 24px; /* 171.429% */
+    letter-spacing: -0.28px;
+    width: 216px;
+    gap: 10px;
 }
 .main-dashboard .content-col .box .content-f input{
     width: 1059px;
