--- a/src/component/Simak-component/form.css
+++ b/src/component/Simak-component/form.css
@@ -1,6 +1,6 @@
 .main-dashboard{
     width: 1610px;
-    height: 2000px;
+    height: 2500px;
     flex-shrink: 0;
     overflow-y: hidden;
 }
@@ -27,7 +27,7 @@
 }
 .main-dashboard .content-col{
     display: flex;
-    height: 1743px;
+    height: 2500px;
     flex-direction: column;
     align-items: flex-start;
     gap: 20px;
@@ -46,7 +46,7 @@
 .main-dashboard .content-col .box .content{
     display: flex;
     width: 1183px;
-    height: 311px;
+    height: auto;
     flex-shrink: 0;    
     flex-direction: column;
     align-items: flex-start;
@@ -55,6 +55,7 @@
     background: #000B48;
     margin-top: 20px;
     margin-left: 20px;
+    padding-bottom: 45px;
 }
 .main-dashboard .content-col .box .content h1{
     color: #FFF;
