--- a/src/component/Silaras-component/fix-form.css
+++ b/src/component/Silaras-component/fix-form.css
@@ -1,6 +1,6 @@
 .main-dashboard{
     width: 1610px;
-    height: 2000px;
+    height: 2500px;
     flex-shrink: 0;
     overflow-y: hidden;
 }
@@ -34,7 +34,7 @@
     flex-shrink: 0;
     overflow-y: hidden;
 }
-.main-dashboard .content-col .box .content{
+.main-dashboard .content-col .box3 .content{
     display: flex;
     width: 1610px;
     height: 345px;
@@ -43,7 +43,7 @@
     gap: 19px;
     flex-shrink: 0;
 }
-.main-dashboard .content-col .box .content{
+.main-dashboard .content-col .box3 .content{
     display: flex;
     width: 1183px;
     height: 311px;
@@ -56,7 +56,7 @@
     margin-top: 20px;
     margin-left: 20px;
 }
-.main-dashboard .content-col .box .content h1{
+.main-dashboard .content-col .box3 .content h1{
     color: #FFF;
     font-family: "DM Sans";
     font-size: 24px;
@@ -66,17 +66,17 @@
     letter-spacing: -0.48px;
     margin-top: 30px;
 }
-.main-dashboard .content-col .box .content table{
+.main-dashboard .content-col .box3 .content table{
     width:1183px;
     margin-left: 20px;
 }
-.main-dashboard .content-col .box .content table tr{
+.main-dashboard .content-col .box3 .content table tr{
     gap: 10px;
     width: 1183px;
     padding-left: 10px;
     text-align: center;
 }
-.main-dashboard .content-col .box .content table tr th{
+.main-dashboard .content-col .box3 .content table tr th{
     color: #A3AED0;
     font-family: "DM Sans";
     font-size: 14px;
@@ -88,7 +88,7 @@
     width: 216px;
     gap: 10px;
 }
-.main-dashboard .content-col .box .content table tr td{
+.main-dashboard .content-col .box3 .content table tr td{
     color: #FFF;
     text-align: center;
     font-family: "DM Sans";
@@ -98,15 +98,15 @@
     line-height: 24px; /* 171.429% */
     letter-spacing: -0.28px;
 }
-.main-dashboard .content-col .box .content table tr td img{
+.main-dashboard .content-col .box3 .content table tr td img{
     margin-right: 4px;
     vertical-align: middle;
 }
-.main-dashboard .content-col .box .content table tr td a{
+.main-dashboard .content-col .box3 .content table tr td a{
     text-decoration: none;
     color: #FFF;
 }
-.main-dashboard .content-col .box .content-f{
+.main-dashboard .content-col .box3 .content-f{
     display: flex;
     width: 1212px;
     height: auto;
@@ -118,7 +118,7 @@
     background: #000B48;
     margin-top: 20px;
 }
-.main-dashboard .content-col .box .content-f h1{
+.main-dashboard .content-col .box3 .content-f h1{
     color: #FFF;
     font-family: "DM Sans";
     font-size: 24px;
@@ -129,13 +129,13 @@
     margin-top: 30px;
     margin-bottom: 20px;
 }
-.main-dashboard .content-col .box .content-f{
+.main-dashboard .content-col .box3 .content-f{
     display: flex;
     flex-direction: column;
     margin-left: 29px;
     padding-bottom: 20px;
 }
-.main-dashboard .content-col .box .content-f label{
+.main-dashboard .content-col .box3 .content-f label{
     color: #A3AED0;
     font-family: "DM Sans";
     font-size: 19px;
@@ -147,7 +147,7 @@
     margin-left: 38px;
     width: 390px;
 }
-.main-dashboard .content-col .box .content-f table{
+.main-dashboard .content-col .box3 .content-f table{
     width: 1059px;
     display: flex;
     flex-direction: column;
@@ -155,11 +155,11 @@
     padding-left: 35px;
     gap: 10px;
 }
-.main-dashboard .content-col .box .content-f table tr{
+.main-dashboard .content-col .box3 .content-f table tr{
     width: 1000px;
     height: auto;
 }
-.main-dashboard .content-col .box .content-f table tr td{
+.main-dashboard .content-col .box3 .content-f table tr td{
     color: #A3AED0;
     font-family: "DM Sans";
     font-size: 19px;
@@ -171,7 +171,7 @@
     margin-left: 38px;
     width: 390px;
 }
-.main-dashboard .content-col .box .content-f table tr .input{
+.main-dashboard .content-col .box3 .content-f table tr .input{
     width: 1059px;
     height: 48px;
     flex-shrink: 0;
@@ -187,7 +187,7 @@
     letter-spacing: -0.24px;
     padding-left: 35px;
 }
-.main-dashboard .content-col .box .content-f input{
+.main-dashboard .content-col .box3 .content-f input{
     width: 1059px;
     height: 40px;
     flex-shrink: 0;
@@ -204,7 +204,7 @@
     padding-left: 35px;
     margin-left: 35px;
 }
-.main-dashboard .content-col .box .content-f textarea{
+.main-dashboard .content-col .box3 .content-f textarea{
     width: 1059px;
     height: 255px;
     flex-shrink: 0;
@@ -222,7 +222,7 @@
     margin-left: 35px;
     padding-top: 15px;
 }
-.main-dashboard .content-col .box .content-tx{
+.main-dashboard .content-col .box3 .content-tx{
     display: flex;
     width: 1212px;
     height: 400px;
@@ -235,7 +235,7 @@
     margin-top: 20px;
     margin-left: 20px;
 }
-.main-dashboard .content-col .box .content-tx h1{
+.main-dashboard .content-col .box3 .content-tx h1{
     color: #FFF;
     font-family: "DM Sans";
     font-size: 24px;
@@ -246,7 +246,7 @@
     margin-top: 30px;
     margin-bottom: 20px;
 }
-.main-dashboard .content-col .box .content-tx textarea{
+.main-dashboard .content-col .box3 .content-tx textarea{
     width: 1059px;
     height: 255px;
     flex-shrink: 0;
@@ -264,7 +264,7 @@
     margin-left: 35px;
     padding-top: 15px;
 }
-.main-dashboard .content-col .box .content-ty{
+.main-dashboard .content-col .box3 .content-ty{
     display: flex;
     width: 1212px;
     height: 470px;
@@ -278,7 +278,7 @@
     margin-left: 20px;
     gap: 25px;
 }
-.main-dashboard .content-col .box .content-ty h1{
+.main-dashboard .content-col .box3 .content-ty h1{
     color: #FFF;
     font-family: "DM Sans";
     font-size: 24px;
@@ -288,21 +288,21 @@
     letter-spacing: -0.48px;
     margin-top: 30px;
 }
-.main-dashboard .content-col .box .content-ty .check{
+.main-dashboard .content-col .box3 .content-ty .check{
     display: flex;
     flex-direction: row;
     width: 1153px;
     gap: 10px;
     align-items: flex-start;
 }
-.main-dashboard .content-col .box .content-f .check{
+.main-dashboard .content-col .box3 .content-f .check{
     display: flex;
     flex-direction: row;
     width: 1153px;
     align-items: flex-start;
     margin-top: -15px;
 }
-.main-dashboard .content-col .box .content-f .check input[type="checkbox"]{
+.main-dashboard .content-col .box3 .content-f .check input[type="checkbox"]{
     width: 24px;
     height: 24px;
     flex-shrink: 0;
@@ -312,7 +312,7 @@
     margin-top: 12px;
 }
 
-.main-dashboard .content-col .box .content-ty .check input[type="checkbox"]{
+.main-dashboard .content-col .box3 .content-ty .check input[type="checkbox"]{
     width: 24px;
     height: 24px;
     flex-shrink: 0;
@@ -321,7 +321,7 @@
     margin-left: 28px;
     margin-top: 12px;
 }
-.main-dashboard .content-col .box .content-f .check label{
+.main-dashboard .content-col .box3 .content-f .check label{
     display: flex;
     width: 230px;
     height: 46px;
@@ -338,7 +338,7 @@
     letter-spacing: -0.32px;
     margin-right: -150px;
 }
-.main-dashboard .content-col .box .content-ty .check label{
+.main-dashboard .content-col .box3 .content-ty .check label{
     display: flex;
     width: 1025px;
     height: 46px;
@@ -355,7 +355,7 @@
     line-height: 28px; /* 175% */
     letter-spacing: -0.32px;
 }
-.main-dashboard .content-col .box .submit{
+.main-dashboard .content-col .box3 .submit{
     display: flex;
     padding: 9px 17px;
     justify-content: center;
@@ -433,4 +433,14 @@
     cursor: pointer;
     border-radius: 3px;
     margin-right: 30px;
+}
+@media only screen and (max-width: 480px) {
+    .main-dashboard .profile{
+        display: none;
+    }
+    .main-dashboard .content-col .box3 {
+        scale: 0.5;
+        margin-left: -312px;
+        margin-top: -206px;
+    }
 }
