--- a/src/component/Homepage-component/footer.css
+++ b/src/component/Homepage-component/footer.css
@@ -50,3 +50,10 @@
     transition: all 0.4s ease-in-out;
     transform: scale(1.1);
 }
+@media only screen and (max-width: 480px) {
+    .footer{
+        scale: 0.3;
+        margin-top: -409px;
+        margin-right: 190px;    
+    }
+}
