--- a/src/component/Mawasdiri-component/content.css
+++ b/src/component/Mawasdiri-component/content.css
@@ -1,6 +1,6 @@
 .main-dashboard{
     width: 1610px;
-    height: 2000px;
+    height: 2500px;
     flex-shrink: 0;
     overflow-y: hidden;
 }
@@ -351,4 +351,14 @@
 .main-dashboard .profile svg:hover{
     transform: scale(1.1);
     transition: all 0.4s ease-in-out;
+}
+@media only screen and (max-width: 480px) {
+    .main-dashboard .profile{
+        display: none;
+    }
+    .main-dashboard .content-col .box {
+        scale: 0.5;
+        margin-left: -312px;
+        margin-top: -53px;
+    }
 }
