--- a/src/component/Mawasdiri-component/sidebar.css
+++ b/src/component/Mawasdiri-component/sidebar.css
@@ -93,3 +93,28 @@
     height: 24px;
     flex-shrink: 0;
 }
+/* @media only screen and (max-width: 480px) {
+    .sidebar .sidebar-col{
+        background: none;
+        position: absolute;
+    }
+    .sidebar .sidebar-col .selected{
+        display: none;    
+    }
+    .sidebar .sidebar-col .separator{
+        display: none;
+    }
+    .sidebar .sidebar-col .logo-col .logo{
+        width: 30px;
+        height: 30px;        flex-shrink: 0;
+        background: url(../../assets/menu.svg) rgb(255, 255, 255, 0) 50% / cover no-repeat;
+        transition: all 0.4s ease-in-out;
+        cursor: pointer;
+        padding-left: 10px;
+        margin-top: 15px;
+        margin-left: 20px;
+    }
+    .sidebar .sidebar-col .logo-col h2{
+        display: none;
+    }
+} */
