--- a/src/component/Silaras-component/content-laras.css
+++ b/src/component/Silaras-component/content-laras.css
@@ -1,6 +1,6 @@
 .main-dashboard{
     width: 1610px;
-    height: auto;
+    height: 2500px;
     flex-shrink: 0;
     overflow-y: hidden;
 }
@@ -333,3 +333,8 @@
     transform: scale(1.1);
     transition: all 0.4s ease-in-out;
 }
+/* @media only screen and (max-width: 480px) {
+    .main-dashboard .profile{
+        display: none;
+    }
+} */
