--- a/src/component/Simak-component/content-simak.css
+++ b/src/component/Simak-component/content-simak.css
@@ -334,3 +334,8 @@
     transform: scale(1.1);
     transition: all 0.4s ease-in-out;
 }
+@media only screen and (max-width: 480px) {
+    .main-dashboard .profile{
+        display: none;
+    }
+}
