--- a/src/pages/homepage.css
+++ b/src/pages/homepage.css
@@ -22,3 +22,14 @@
     transform: scale(1.1);
     transition: all 0.4s ease-in-out;
 }
+@media only screen and (max-width: 480px) {
+    .home{
+        width: 616px;
+        flex-direction: column;
+        align-items: center;
+    }
+    .home .asset{
+        scale: 0.3;
+        margin-left: 200px;   
+    }
+}
