--- a/src/component/Mawasdiri-component/cuti.css
+++ b/src/component/Mawasdiri-component/cuti.css
@@ -4,6 +4,25 @@
     flex-shrink: 0;
     overflow-y: hidden;
 }
+.main-dashboard .load{
+    width: 100px;
+    height: 100px;
+    border: 20px solid #FFF;
+    border-bottom-color: #FF3D00;
+    border-radius: 50%;
+    display: inline-block;
+    box-sizing: border-box;
+    animation: rotation 1s linear infinite;
+    }
+
+    @keyframes rotation {
+    0% {
+        transform: rotate(0deg);
+    }
+    100% {
+        transform: rotate(360deg);
+    }
+}
 .main-dashboard p{
     color: #FFF;
     font-family: "poppins";
