--- a/src/component/Mawasdiri-component/content.css
+++ b/src/component/Mawasdiri-component/content.css
@@ -24,7 +24,6 @@
     box-sizing: border-box;
     animation: rotation 1s linear infinite;
     }
-
     @keyframes rotation {
     0% {
         transform: rotate(0deg);
@@ -102,6 +101,86 @@
     background: #000B48;
     margin-top: 20px;
     margin-left: 20px;
+}
+.main-dashboard .content-col .box-m .content form select{
+    width: auto;
+    height: 40px;
+    flex-shrink: 0;
+    border-radius: 16px;
+    background: #001274;
+    margin-bottom: 20px;
+    color: #fff;
+    font-family: poppins;
+    font-size: 19px;
+    font-style: normal;
+    font-weight: 500;
+    line-height: 20px;
+    letter-spacing: -.24px;
+    padding-left: 35px;
+    margin-left: 35px;
+}
+.main-dashboard .content-col .box-m .content form label {
+    color: #a3aed0;
+    font-family: poppins;
+    font-size: 19px;
+    font-style: normal;
+    font-weight: 500;
+    line-height: 20px;
+    letter-spacing: -.24px;
+    margin-bottom: 15px;
+    margin-left: 38px;
+    width: 230px;
+}
+.main-dashboard .content-col .box-m .content form .cari{
+    padding: 9px 17px;
+    justify-content: center;
+    align-items: center;
+    border-radius: 16px;
+    background: #d30ed8;
+    width: auto;
+    height: 50px;
+    color: #fff;
+    font-family: poppins;
+    font-size: 24px;
+    font-style: normal;
+    font-weight: 500;
+    line-height: 28px;
+    letter-spacing: -.32px;
+    margin-top: 26px;
+}
+.main-dashboard .content-col .box-m .content form .active{
+    padding: 9px 17px;
+    justify-content: center;
+    align-items: center;
+    border-radius: 16px;
+    background: #29AB87;
+    width: auto;
+    height: 50px;
+    color: #fff;
+    font-family: poppins;
+    font-size: 24px;
+    font-style: normal;
+    font-weight: 500;
+    line-height: 28px;
+    letter-spacing: -.32px;
+    margin-top: 26px;
+}
+.main-dashboard .content-col .box-m .content form .reset{
+    padding: 9px 17px;
+    justify-content: center;
+    align-items: center;
+    border-radius: 16px;
+    background: #FF2800;
+    width: auto;
+    height: 50px;
+    color: #fff;
+    font-family: poppins;
+    font-size: 24px;
+    font-style: normal;
+    font-weight: 500;
+    line-height: 28px;
+    letter-spacing: -.32px;
+    margin-top: 26px;
 }
 .main-dashboard .content-col .box-m .content .tab-identity{
     display: flex;
