--- a/src/component/Mawasdiri-component/content.css
+++ b/src/component/Mawasdiri-component/content.css
@@ -102,6 +102,54 @@
     margin-top: 20px;
     margin-left: 20px;
 }
+.main-dashboard .content-col .box-m .content .pagination{
+    display: flex;
+    width: 200px;
+    justify-content: space-between;
+    margin-top: 10px;
+    margin-bottom: 10px;
+    gap: 10px;
+}
+.main-dashboard .content-col .box-m .content .pagination .left,
+.main-dashboard .content-col .box-m .content .pagination .right{
+    width: 80px;
+    height: 30px;
+    border-radius: 8px;
+    background: #001274;
+    color: #fff;
+    font-family: poppins;
+    font-size: 14px;
+    font-style: normal;
+    font-weight: 500;
+    line-height: 20px;
+    letter-spacing: -.28px;
+    cursor: pointer;
+    border: none;
+    transition: all 0.4s ease-in-out;
+}
+.main-dashboard .content-col .box-m .content .pagination .left:hover{
+    transform: scale(1.1);
+    transition: all 0.4s ease-in-out;
+}
+.main-dashboard .content-col .box-m .content .pagination .right:hover{
+    transform: scale(1.1);
+    transition: all 0.4s ease-in-out;
+}
+.main-dashboard .content-col .box-m .content .pagination .page-number{
+    width: 40px;
+    height: 30px;
+    border-radius: 8px;
+    background: #001274;
+    color: #fff;
+    font-family: poppins;
+    font-size: 14px;
+    font-style: normal;
+    font-weight: 500;
+    line-height: 20px;
+    letter-spacing: -.28px;
+    text-align: center;
+    border: none;
+}
 .main-dashboard .content-col .box-m .content form select{
     width: auto;
     height: 40px;
