--- a/src/pages/Simak-page/dashboard-simak.css
+++ b/src/pages/Simak-page/dashboard-simak.css
@@ -2,9 +2,10 @@
     display: flex;
     flex-direction: row;
     width: 1920px;
-    height: 2500px;
+    height: auto;
     background: #000E60;
     overflow-y: hidden;
+    padding-bottom: 15px;
 }
 .dashboard .content .switch1{
     position: absolute;
