--- a/src/component/Mawasdiri-component/content.css
+++ b/src/component/Mawasdiri-component/content.css
@@ -179,6 +179,40 @@
     margin-left: 38px;
     width: 230px;
 }
+.main-dashboard .content-col .box-m .content form input{
+    width: 175px;
+    height: 40px;
+    flex-shrink: 0;
+    border-radius: 16px;
+    background: #001274;
+    margin-bottom: 20px;
+    color: #fff;
+    font-family: poppins;
+    font-size: 19px;
+    font-style: normal;
+    font-weight: 500;
+    line-height: 20px;
+    letter-spacing: -.24px;
+    padding-left: 35px;
+    margin-left: 35px;
+}
+.main-dashboard .content-col .box-m .content form .date{
+    width: auto;
+    height: 40px;
+    flex-shrink: 0;
+    border-radius: 16px;
+    background: #001274;
+    margin-bottom: 20px;
+    color: #fff;
+    font-family: poppins;
+    font-size: 19px;
+    font-style: normal;
+    font-weight: 500;
+    line-height: 20px;
+    letter-spacing: -.24px;
+    padding-left: 35px;
+    margin-left: 35px;
+}
 .main-dashboard .content-col .box-m .content form .cari{
     padding: 9px 17px;
     justify-content: center;
