--- a/src/component/Silaras-component/fix-form.css
+++ b/src/component/Silaras-component/fix-form.css
@@ -1,6 +1,6 @@
 .main-dashboard{
     width: 1610px;
-    height: 2500px;
+    height: auto;
     flex-shrink: 0;
     overflow-y: hidden;
 }
@@ -30,7 +30,7 @@
 }
 .main-dashboard .content-col{
     display: flex;
-    height: 1743px;
+    height: auto;
     flex-direction: column;
     align-items: flex-start;
     gap: 20px;
