--- a/src/component/Simak-component/form.css
+++ b/src/component/Simak-component/form.css
@@ -1,6 +1,6 @@
 .main-dashboard{
     width: 1610px;
-    height: 2500px;
+    height: auto;
     flex-shrink: 0;
     overflow-y: hidden;
 }
@@ -49,7 +49,7 @@
 }
 .main-dashboard .content-col{
     display: flex;
-    height: 2500px;
+    height: auto;
     flex-direction: column;
     align-items: flex-start;
     gap: 20px;
